crates/xlate/tests/snapshots/golden_matrix__responses__output_non_strict__gpt-4o-mini__20260910__responses_to_chat__gpt5_responses.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "gpt-5.4",
  "messages": [
    {
      "role": "user",
      "content": "Give a code."
    }
  ],
  "response_format": {
    "type": "json_schema",
    "json_schema": {
      "name": "code",
      "schema": {
        "properties": {
          "code": {
            "type": "string"
          }
        },
        "required": [
          "code"
        ],
        "type": "object"
      },
      "strict": false
    }
  },
  "max_completion_tokens": 128
}
--- headers ---
upstream_streams: false
--- degraded ---
output.schema=rewritten
